--- a/scss/components/_clients.scss
+++ b/scss/components/_clients.scss
@@ -1,18 +1,30 @@
 .clients {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    padding-top: 60px;
+    padding-bottom: 60px;
     margin: 0;
+
+    @include mq (desktop) {
+        padding-top: 94px;
+        padding-bottom: 94px;
+    }
+     
 
     &__permanent-clients {
             font-weight: 700;
-            font-size: 36px;
-            line-height: 1.17;
+            font-size: 28px;
+            line-height: 1.18;
             text-align: center;
             letter-spacing: 0.03em;
             color: #212121;
             padding-top: 0;
-            margin-bottom: 50px;
+            margin-bottom: 30px;
             transition: border var(--slow-anim) var(--fost-anim);
+            
+            @include mq (desktop) {
+            font-size: 36px;
+            line-height: 1.17;
+            margin-bottom: 50px;
+            }   
         }
 
 }
@@ -20,30 +32,72 @@
 
 
 .scroll {
-    display: flex;
-    align-items: center;
-    justify-content: center;
     margin: 0;
-    padding: 0;
+    padding: 0; 
+
+    @include mq (mobile) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center; 
+    }
+    @include mq (tablet) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    }
+    @include mq (desktop) {
+        display: flex;
+        flex-wrap: nowrap;
+    }
 
 }
 
 .scroll__going-permanent-clients {
     list-style-type: none;
+    margin-bottom: 30px;
+    margin-right: 30px;
 
-    &:not(:last-child) {
-            margin-right: 30px;
-    
+    @include mq (mobile) {
+        &:nth-child(2n) {
+            margin-right: 0px;
+            }
+        &:nth-child(n + 5) {
+            margin-bottom: 0;
         }
+    }
+    @include mq (tablet) {
+        &:nth-child(n + 4) {
+            margin-bottom: 0;
+            }
+        &:nth-child(2n) {
+            margin-right: 30px;
+            }
+        &:nth-child(3n) {
+            margin-right: 0px;
+        }
+    }
+    @include mq (desktop) {
+          
+            &:nth-child(2n) {
+            margin-right: 30px;
+            }
+            
+            &:nth-child(-n + 3) {
+            margin-bottom: 0;
+            }
+            &:nth-child(3n) {
+            margin-right: 30px;
+            }
+            &:last-child {
+            margin-right: 0px;
+            }
+    }
 }
-
-
 
 .scroll__permanent-clients-icons {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 170px;
     height: 92px;
     border: 1px solid #AFB1B8;
     border-radius: 4px;
@@ -54,6 +108,15 @@
     &:focus .scroll__photo-icons {
             fill: var(--brend-color);
         }
+    @include mq (mobile) {
+        width: 210px;
+    }
+    @include mq (tablet) {
+        width: 226px;
+    }
+    @include mq (desktop) {
+        width: 170px;
+    }
 
 }
 
