--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -4,18 +4,76 @@
     padding-bottom: 60px;
 
     &-contanier {
+        display: flex;
+        flex-direction: column;
+
+        @include mq (tablet) {
+            display: flex;
+            flex-wrap: wrap;
+            flex-direction: row;
+            justify-content: center;
+        }
+            
+        @include mq (desktop){
             display: flex;
             align-items: baseline;
             flex-direction: row;
+            }
         }
 }
 
-
-
 .logo-footer-group {
-    /* padding: 0; */
-    margin-right: 70px;
-    padding-right: 15px;
+    text-align: center;
+
+    @include mq (mobile) {
+        margin-bottom: 60px;
+    }
+    @include mq (tablet) {
+        margin-right: 165px;
+    }
+
+    @include mq (desktop) {
+        margin-right: 70px;
+        padding-right: 15px;
+    }
+    
+}
+.logo-blue-footer {
+        font-family: 'Raleway';
+        font-weight: 700;
+        font-size: 24px;
+        line-height: 1.16;
+        letter-spacing: 0.03em;
+        color: var(--brend-color);
+        text-decoration: none;
+        
+
+    @include mq (desktop) {
+        font-size: 26px;
+        line-height: 1.19;
+        padding: 0;
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+   
+
+}
+
+.logo-footer {
+        font-family: 'Raleway';
+        font-weight: 700;
+        font-size: 24px;
+        line-height: 1.16;
+        letter-spacing: 0.03em;
+        color: var(--primary-white-color);
+        text-decoration: none;
+
+    @include mq (desktop) {
+        font-size: 26px;
+        line-height: 1.19;
+
+    }
+    
 }
 
 .link-footer {
@@ -30,13 +88,22 @@
     letter-spacing: 0.03em;
     color: var(--primary-white-color);
     font-style: normal;
-    margin-bottom: 9px;
+    margin-bottom: 8px;
+
+    @include mq (desktop) {
+        margin-bottom: 9px;
+    }
+    
 
 }
 
 .group-footer-1 {
     margin-top: 0;
-    margin-bottom: 9px;
+    margin-bottom: 8px;
+
+    @include mq (desktop) {
+        margin-bottom: 9px;
+        }
 }
 
 .group-footer-2 {
@@ -76,7 +143,12 @@
 }
 
 .join {
+    text-align: center;
+    margin-bottom: 60px;
+
+    @include mq (desktop) {
     margin-right: auto;
+    }
 
     &-h {
             display: flex;
@@ -134,6 +206,18 @@
 
 }
 
+
+
+.footer-subscription {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    @include mq (desktop) {
+    display: flex;
+    flex-direction: column;
+    }
+}
 .subscription {
     font-weight: 700;
     font-size: 14px;
@@ -144,16 +228,16 @@
     margin-bottom: 20px;
 }
 
-.footer-subscription {
+.footer-mail {
     display: flex;
     flex-direction: column;
-}
+    align-items: center;
 
-.footer-mail {
+    @include mq (desktop) {
     display: flex;
     align-items: center;
     /* position: relative;     */
-
+    }
 }
 
 .footer-label {
@@ -169,28 +253,32 @@
 }
 
 .footer-input {
-    width: 358px;
+    width: 450px;
     height: 50px;
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
-
-
+    
+    
     font-weight: 400;
     font-size: 16px;
     line-height: 1.43;
     padding-left: 16px;
-
+    
     display: flex;
     align-items: center;
-
+    
     color: rgba(255, 255, 255, 0.6);
-    margin-right: 12px;
+    margin-bottom: 20px;
     background-color: transparent;
-}
+   
+    @include mq (desktop) {
+        width: 358px;
+    }
+ }
+    
 
 .submit-footer {
-
     width: 200px;
     height: 50px;
     background-color: #2196F3;
@@ -207,7 +295,6 @@
     justify-content: center;
 
     color: #FFFFFF;
-    /* padding-right: 29px; */
     padding: 0;
     margin: 0;
     cursor: pointer;
@@ -215,10 +302,6 @@
 }
 
 .subscription-icons-footer {
-    /* position: absolute;
-    bottom: 20%;
-    right: 28px;
-    transform: translateY(-20%); */
     margin-left: 10px;
 
 }
