--- a/scss/components/_team.scss
+++ b/scss/components/_team.scss
@@ -1,192 +1,132 @@
+
 .team {
+    background-color: #F5F4FA;
+
     @include mq (mobile) {
         padding-top: 60px;
         padding-bottom: 60px;
-        background-color: #F5F4FA;
     }
-
     @include mq (tablet) {
         display: flex;
         flex-wrap: wrap;
-
+    
         padding-top: 60px;
         padding-bottom: 60px;
-        background-color: #F5F4FA;
-
     }
-
     @include mq (desktop) {
         padding-top: 94px;
         padding-bottom: 94px;
-        
-
     }
-    
+
 
     &__our-team {
-        @include mq (mobile) {
-                font-weight: 700;
-                font-size: 28px;
-                line-height: 1.17;
-                letter-spacing: 0.03em;
-                color: var(--title-text-color);
-                margin-top: 0px;
-                margin-bottom: 30px;
-                text-align: center;
-            }
-        
-        @include mq (tablet) {
-                font-weight: 700;
-                font-size: 28px;
-                line-height: 1.17;
-                letter-spacing: 0.03em;
-                color: var(--title-text-color);
-                margin-top: 0px;
-                margin-bottom: 30px;
-                text-align: center;
-        
-            }
-        
-        @include mq (desktop) {
-                font-weight: 700;
-                font-size: 36px;
-                line-height: 1.16;
-                letter-spacing: 0.03em;
-                color: var(--title-text-color);
-                margin-top: 0px;
-                margin-bottom: 50px;
-                text-align: center;
-        }
+        font-weight: 700;
+        font-size: 28px;
+        line-height: 1.17;
+        letter-spacing: 0.03em;
+        color: var(--title-text-color);
+        margin-top: 0px;
+        margin-bottom: 30px;
+        text-align: center;
 
-}
+        @include mq (desktop) {
+        font-size: 36px;
+        line-height: 1.16;
+        margin-bottom: 50px;
+        }    
+    }
 }
 
 .card {
-    @include mq (mobile) {
-        display: block;
-        padding: 0;
-        margin-top: 0px;
-        margin-bottom: 0px;
+    padding: 0;
+    margin-top: 0px;
+    margin-bottom: 0px;
 
-    }
     @include mq (tablet) {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        padding: 0;
-        margin-top: 0px;
-        margin-bottom: 0px;
-        
-
     }
+
     @include mq (desktop) {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 0;
-    margin: -15px;
-    // margin-top: 0px;
-    // margin-bottom: 0px;
-    }    
+        display: flex;
+        flex-wrap: nowrap;    
+    }
     
+
     &__member-item {
-    @include mq (mobile) {
         background-color: #ffffff;
-        margin-bottom: 30px;
+        
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
         border-radius: 0px 0px 4px 4px;
         list-style-type: none;
-    //     &:not(:last-child) {
-    //         margin-bottom: 30px;
+
+        @include mq (mobile) {
+            // width: 450px;
+            margin-bottom: 30px;
+            &:last-child {
+                margin-bottom: 0;
+                }
+        }   
+
+        @include mq (tablet) {
+            // width: 354px;
+            margin-right: 30px;
+            margin-bottom: 30px;
+            &:nth-child(n + 3) {
+                margin-bottom: 0;
+                }
+            &:nth-child(2n) {
+                margin-right: 0px;
+                }
         }
 
-    // }
-    @include mq (tablet) {
-        // display: flex;
-        // flex-wrap: wrap;
-        background-color: #ffffff;
-        
-        // margin-right: 30px;
-        margin-bottom: 30px;
-        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-        border-radius: 0px 0px 4px 4px;
-        list-style-type: none;
-        &:nth-child(n + 3) {
-                margin-bottom: 0;
+        @include mq (desktop) {
+            // width: 270px;
+            margin-right: 30px;
+            &:last-child {
+               margin-right: 0;
             }
-        &:not(:nth-child(2n)) {
+            &:nth-child(2n) {
                 margin-right: 30px;
             }
-       
+            &:nth-child(-n + 3) {
+                margin-bottom: 0;
+            }
+        }
     }
-    @include mq (desktop) {
-            background-color: #ffffff;
-            margin: 15px;
-            box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-            border-radius: 0px 0px 4px 4px;
-            list-style-type: none;
-            flex-basis: calc(( 100% - 120px )/ 4);
-            &:not(:nth-child(2n)) {
-                    margin-right: 15px;
-                }
-          
-    }
-    // &__member-img {
-    // @include mq (mobile) {
-    //     width: 100%;
-    //     height: 460px;
-        
-    // }
-    // @include mq (tablet) {
-    //     width: 100%;
-    //     height: 374px;
-    // }
-    // @include mq (desktop) {
-    //     width: 100%;
-    //     height: 260px;
-    // }
+    
 
-    // }
-}
-    
-    &__member-item:last-child {
-            margin-right: 0;
-    
-        }
-    
+
     &__member-group {
-        @include mq (mobile) {
-            padding-top: 30px;
-            padding-bottom: 24px;
-        }
-        @include mq (tablet) {
-            padding-top: 30px;
-            padding-bottom: 24px;
-        }
-        @include mq (desktop){
-            padding-top: 30px;
+        padding-top: 30px;
+        padding-bottom: 24px;
+
+        @include mq (desktop) {
             padding-bottom: 30px;
         }
-        }
-    
+
+    }
+
     &__member-title {
-            font-weight: 500;
-            font-size: 16px;
-            line-height: 1.19;
-            letter-spacing: 0.03em;
-            color: var(--title-text-color);
-            margin-top: 0px;
-            margin-bottom: 10px;
-            text-align: center;
-        }
-    
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.19;
+        letter-spacing: 0.03em;
+        color: var(--title-text-color);
+        margin-top: 0px;
+        margin-bottom: 10px;
+        text-align: center;
+    }
+
     &__member-position {
-            font-size: 16px;
-            line-height: 1.19;
-            letter-spacing: 0.03em;
-            color: var(--text-color);
-            text-align: center;
-            margin-bottom: 16px;
-        }
+        font-size: 16px;
+        line-height: 1.19;
+        letter-spacing: 0.03em;
+        color: var(--text-color);
+        text-align: center;
+        margin-bottom: 16px;
+    }
 
 }
 
@@ -198,46 +138,46 @@
     align-items: center;
 
     &__socials-item:not(:last-child) {
-            margin-right: 10px;
-        }
-    
+        margin-right: 10px;
+    }
+
     &__socials-link {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 44px;
-            height: 44px;
-    
-            background-color: #FFFFFF;
-    
-            border-radius: 50%;
-            transition: color var(--slow-anim) var(--fost-anim),
-                background-color var(--slow-anim) var(--fost-anim);
-        }
-    
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 44px;
+        height: 44px;
+
+        background-color: #FFFFFF;
+
+        border-radius: 50%;
+        transition: color var(--slow-anim) var(--fost-anim),
+            background-color var(--slow-anim) var(--fost-anim);
+    }
+
     &__socials-icons {
-            fill: #AFB1B8;
-        }
-    
+        fill: #AFB1B8;
+    }
+
     &__socials-link:hover &__socials-icons,
     &__socials-link:focus &__socials-icons {
-            fill: #FFFFFF;
-        }
-    
+        fill: #FFFFFF;
+    }
+
     &__socials-link:hover,
     &__socials-link:focus {
-            background-color: var(--brend-color);
-        }
-    
+        background-color: var(--brend-color);
+    }
+
     &-footer {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-    
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
     &-item-footer:not(:last-child) {
-            margin-right: 10px;
-        }
+        margin-right: 10px;
+    }
 }
 
 .socials-link-footer {
@@ -252,13 +192,13 @@
 
     &:hover,
     &:focus {
-            background-color: var(--brend-color);
-        }
+        background-color: var(--brend-color);
+    }
 
     &:hover .socials-icons,
     &:focus .socials-icons {
-            fill: #FFFFFF;
-        }
+        fill: #FFFFFF;
+    }
 }
 
 .socials-icons-footer {
