--- a/css/main.css
+++ b/css/main.css
@@ -1772,6 +1772,126 @@ img {
   margin-left: 10px;
 }
 
+.filter {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .filter {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .filter-title {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    margin-top: 0;
+    margin-bottom: 40px;
+    padding: 0;
+    scroll-behavior: smooth;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .filter-title {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-top: 0;
+    margin-bottom: 40px;
+    padding: 0;
+    scroll-behavior: smooth;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .filter-title {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-top: 0;
+    margin-bottom: 50px;
+    padding-left: 0;
+    scroll-behavior: smooth;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .filter-item {
+    margin-top: 0;
+    margin-bottom: 10px;
+    margin-right: 8px;
+    -webkit-transition: -webkit-box-shadow var(--slow-anim);
+    transition: -webkit-box-shadow var(--slow-anim);
+    transition: box-shadow var(--slow-anim);
+    transition: box-shadow var(--slow-anim), -webkit-box-shadow var(--slow-anim);
+  }
+  .filter-item:last-child {
+    margin-right: 0;
+  }
+  .filter-item:nth-child(n + 4) {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .filter-item {
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-right: 8px;
+    -webkit-transition: -webkit-box-shadow var(--slow-anim);
+    transition: -webkit-box-shadow var(--slow-anim);
+    transition: box-shadow var(--slow-anim);
+    transition: box-shadow var(--slow-anim), -webkit-box-shadow var(--slow-anim);
+  }
+  .filter-item:last-child {
+    margin-right: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .filter-item {
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-right: 8px;
+    -webkit-transition: -webkit-box-shadow var(--slow-anim);
+    transition: -webkit-box-shadow var(--slow-anim);
+    transition: box-shadow var(--slow-anim);
+    transition: box-shadow var(--slow-anim), -webkit-box-shadow var(--slow-anim);
+  }
+}
+
+.filter-item:hover, .filter-item:focus {
+  -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+          box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.filter-item:last-child {
+  margin-right: 0;
+}
+
 .filter-btn {
   font-weight: 500;
   font-size: 16px;
@@ -1822,76 +1942,118 @@ img {
           box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.filter {
-  padding-top: 94px;
-  padding-bottom: 94px;
+@media screen and (min-width: 480px) {
+  .portfolio {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
 }
 
-.filter-title {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin-top: 0;
-  margin-bottom: 50px;
-  padding-left: 0;
-  scroll-behavior: smooth;
+@media screen and (min-width: 768px) {
+  .portfolio {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    padding: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
 }
 
-.filter-item {
-  margin-top: 0;
-  margin-bottom: 0;
-  margin-right: 8px;
-  -webkit-transition: -webkit-box-shadow var(--slow-anim);
-  transition: -webkit-box-shadow var(--slow-anim);
-  transition: box-shadow var(--slow-anim);
-  transition: box-shadow var(--slow-anim), -webkit-box-shadow var(--slow-anim);
+@media screen and (min-width: 1200px) {
+  .portfolio {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
 }
 
-.filter-item:hover, .filter-item:focus {
-  -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-          box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+@media screen and (min-width: 480px) {
+  .portfolio-list {
+    display: block;
+    width: 450px;
+    margin-bottom: 30px;
+    position: relative;
+    -webkit-transition: -webkit-box-shadow var(--slow-anim) var(--fost-anim);
+    transition: -webkit-box-shadow var(--slow-anim) var(--fost-anim);
+    transition: box-shadow var(--slow-anim) var(--fost-anim);
+    transition: box-shadow var(--slow-anim) var(--fost-anim), -webkit-box-shadow var(--slow-anim) var(--fost-anim);
+  }
+  .portfolio-list:last-child {
+    margin-bottom: 0;
+  }
 }
 
-.filter-item:last-child {
-  margin-right: 0;
+@media screen and (min-width: 768px) {
+  .portfolio-list {
+    width: 354px;
+    margin-bottom: 30px;
+    margin-right: 30px;
+    position: relative;
+    -webkit-transition: -webkit-box-shadow var(--slow-anim) var(--fost-anim);
+    transition: -webkit-box-shadow var(--slow-anim) var(--fost-anim);
+    transition: box-shadow var(--slow-anim) var(--fost-anim);
+    transition: box-shadow var(--slow-anim) var(--fost-anim), -webkit-box-shadow var(--slow-anim) var(--fost-anim);
+  }
+  .portfolio-list:nth-child(2n) {
+    margin-right: -30px;
+  }
+  .portfolio-list:last-child {
+    margin-bottom: 0;
+  }
 }
 
-.portfolio {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  padding: 0;
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-.portfolio-list {
-  display: block;
-  margin-bottom: 30px;
-  margin-right: 30px;
-  position: relative;
-  -webkit-transition: -webkit-box-shadow var(--slow-anim) var(--fost-anim);
-  transition: -webkit-box-shadow var(--slow-anim) var(--fost-anim);
-  transition: box-shadow var(--slow-anim) var(--fost-anim);
-  transition: box-shadow var(--slow-anim) var(--fost-anim), -webkit-box-shadow var(--slow-anim) var(--fost-anim);
-}
-
-.portfolio-list:nth-child(3n) {
-  margin-right: -30px;
-}
-
-.portfolio-list:nth-child(n + 7) {
-  margin-bottom: 0;
+@media screen and (min-width: 1200px) {
+  .portfolio-list {
+    display: block;
+    margin-bottom: 30px;
+    margin-right: 30px;
+    position: relative;
+    -webkit-transition: -webkit-box-shadow var(--slow-anim) var(--fost-anim);
+    transition: -webkit-box-shadow var(--slow-anim) var(--fost-anim);
+    transition: box-shadow var(--slow-anim) var(--fost-anim);
+    transition: box-shadow var(--slow-anim) var(--fost-anim), -webkit-box-shadow var(--slow-anim) var(--fost-anim);
+  }
+  .portfolio-list:nth-child(2n) {
+    margin-right: 30px;
+  }
+  .portfolio-list:nth-child(3n) {
+    margin-right: 0px;
+  }
+  .portfolio-list:nth-child(n + 7) {
+    margin-bottom: 0;
+  }
 }
 
 .portfolio-list:hover, .portfolio-list:focus {
