--- a/scss/components/_portfolio.scss
+++ b/scss/components/_portfolio.scss
@@ -1,3 +1,92 @@
+.filter {
+    padding-top: 60px;
+    padding-bottom: 60px;
+
+    @include mq (desktop) {
+        padding-top: 94px;
+        padding-bottom: 94px;
+    }
+    
+
+    &-title {
+    @include mq(mobile)    {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: flex-start;
+        margin-top: 0;
+        margin-bottom: 40px;
+        padding: 0;
+        scroll-behavior: smooth;
+       
+    }
+    @include mq (tablet) {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        margin-top: 0;
+        margin-bottom: 40px;
+        padding: 0;
+        scroll-behavior: smooth;
+    }
+    @include mq (desktop) {
+            display: flex;
+            // flex-wrap: wrap;
+            // align-items: center;
+            justify-content: center;
+            margin-top: 0;
+            margin-bottom: 50px;
+            padding-left: 0;
+            scroll-behavior: smooth;
+        }
+}
+}
+
+
+
+.filter-item {
+    @include mq(mobile) {
+    margin-top: 0;
+    margin-bottom: 10px;
+    margin-right: 8px;
+    transition: box-shadow var(--slow-anim);
+    &:last-child {
+        margin-right: 0;
+    }
+    &:nth-child(n + 4) {
+        margin-bottom: 0;
+    }
+    }
+    @include mq (tablet){
+        margin-top: 0;
+        margin-bottom: 0;
+        margin-right: 8px;
+        transition: box-shadow var(--slow-anim);
+        &:last-child {
+            margin-right: 0;
+            }
+    }
+
+    @include mq(desktop) {
+        margin-top: 0;
+        margin-bottom: 0;
+        margin-right: 8px;
+        transition: box-shadow var(--slow-anim);
+    }
+    
+
+    &:hover,
+    &:focus {
+            box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+                0px 1px 2px rgba(0, 0, 0, 0.08),
+                0px 2px 2px rgba(0, 0, 0, 0.12);
+        }
+    
+    &:last-child {
+            margin-right: 0;
+        }
+}
+
 .filter-btn {
     font-weight: 500;
     font-size: 16px;
@@ -19,105 +108,116 @@
 
 
     &-active {
-            font-weight: 500;
-            font-size: 16px;
-            line-height: 1.62;
-            text-align: center;
-            letter-spacing: 0.03em;
-            color: var(--primary-white-color);
-            background-color: var(--brend-color);
-            border-style: none;
-            border-radius: 4px;
-            display: inline-block;
-            padding-left: 22px;
-            padding-right: 22px;
-            padding-top: 6px;
-            padding-bottom: 6px;
-            min-width: 73px;
-            min-height: 38px;
-            box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
-                0px 1px 2px rgba(0, 0, 0, 0.08),
-                0px 2px 2px rgba(0, 0, 0, 0.12);
-            transition: color var(--slow-anim) var(--fost-anim),
-                background-color var(--slow-anim) var(--fost-anim);
-        }
-    
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.62;
+        text-align: center;
+        letter-spacing: 0.03em;
+        color: var(--primary-white-color);
+        background-color: var(--brend-color);
+        border-style: none;
+        border-radius: 4px;
+        display: inline-block;
+        padding-left: 22px;
+        padding-right: 22px;
+        padding-top: 6px;
+        padding-bottom: 6px;
+        min-width: 73px;
+        min-height: 38px;
+        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+            0px 1px 2px rgba(0, 0, 0, 0.08),
+            0px 2px 2px rgba(0, 0, 0, 0.12);
+        transition: color var(--slow-anim) var(--fost-anim),
+            background-color var(--slow-anim) var(--fost-anim);
+    }
+
     &:active,
     &:hover,
     &:focus {
-            background-color: var(--brend-color);
-            color: var(--primary-white-color);
-            box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
-                0px 1px 2px rgba(0, 0, 0, 0.08),
-                0px 2px 2px rgba(0, 0, 0, 0.12);
-    
-    
-        }
-}
+        background-color: var(--brend-color);
+        color: var(--primary-white-color);
+        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+            0px 1px 2px rgba(0, 0, 0, 0.08),
+            0px 2px 2px rgba(0, 0, 0, 0.12);
 
 
-
-.filter {
-    padding-top: 94px;
-    padding-bottom: 94px;
-
-    &-title {
-            display: flex;
-            flex-wrap: wrap;
-            align-items: center;
-            justify-content: center;
-            margin-top: 0;
-            margin-bottom: 50px;
-            padding-left: 0;
-            scroll-behavior: smooth;
-        }
-}
-
-
-
-.filter-item {
-    margin-top: 0;
-    margin-bottom: 0;
-    margin-right: 8px;
-    transition: box-shadow var(--slow-anim);
-
-    &:hover,
-    &:focus {
-            box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
-                0px 1px 2px rgba(0, 0, 0, 0.08),
-                0px 2px 2px rgba(0, 0, 0, 0.12);
-        }
-    
-    &:last-child {
-            margin-right: 0;
-        }
+    }
 }
 
 .portfolio {
+    @include mq(mobile) {
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+        align-items: center;
+        padding: 0;
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+    @include mq (tablet) {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        padding: 0;
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+    @include mq(desktop) {
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
     padding: 0;
     margin-top: 0;
     margin-bottom: 0;
+    }
 }
 
 
 
 .portfolio-list {
+    @include mq(mobile) {
+        display: block;
+        width: 450px;
+        margin-bottom: 30px;
+        position: relative;
+        transition: box-shadow var(--slow-anim) var(--fost-anim);
+        &:last-child {
+            margin-bottom: 0;
+        }
+    }
+    @include mq (tablet) {
+        width: 354px;
+        margin-bottom: 30px;
+        margin-right: 30px;
+        position: relative;
+        transition: box-shadow var(--slow-anim) var(--fost-anim);
+        &:nth-child(2n) {
+                margin-right: -30px;
+            }
+        &:last-child {
+                margin-bottom: 0;
+
+    }
+}
+
+    @include mq(desktop) {
     display: block;
     margin-bottom: 30px;
     margin-right: 30px;
     position: relative;
     transition: box-shadow var(--slow-anim) var(--fost-anim);
-
+    &:nth-child(2n) {
+        margin-right: 30px;
+    }
     &:nth-child(3n) {
-            margin-right: -30px;
+            margin-right: 0px;
         }
-
+    
     &:nth-child(n + 7) {
             margin-bottom: 0;
         }
-    
+    }
     &:hover,
     &:focus {
             box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
