--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,6 +7,7 @@
 @import './base/reset';
 
 @import './components/header';
+@import './components/mobile-windows';
 @import './components/hero';
 @import './components/modal-windows';
 @import './components/modal-form';
