--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -14,10 +14,16 @@
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4),
                 rgba(47, 48, 58, 0.4)),
             url(../images/hero/Header_sm.jpg);
+        background-image: -webkit-image-set(url(../images/hero/Header_sm.webp) 1x),
+        linear-gradient(to right, rgba(47, 48, 58, 0.4),
+                rgba(47, 48, 58, 0.4));
     @include mq (retina) {
         background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4),
                     rgba(47, 48, 58, 0.4)),
                 url(../images/hero/Header_sm@2x.jpg);
+        background-image: -webkit-image-set(url(../images/hero/Header_sm@2x.webp) 2x),
+                linear-gradient(to right, rgba(47, 48, 58, 0.4),
+                    rgba(47, 48, 58, 0.4));
         }
 
     @include mq (tablet) {
@@ -26,11 +32,17 @@
         background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4),
                     rgba(47, 48, 58, 0.4)),
                 url(../images/hero/Header_md.jpg);
+        background-image: -webkit-image-set(url(../images/hero/Header_dm.webp) 1x),
+                linear-gradient(to right, rgba(47, 48, 58, 0.4),
+                    rgba(47, 48, 58, 0.4));
     @include mq (retina) {
         background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4),
                         rgba(47, 48, 58, 0.4)),
                     url(../images/hero/Header_md@2x.jpg);
             }
+        background-image: -webkit-image-set(url(../images/hero/Header_md@2x.webp) 2x),
+        linear-gradient(to right, rgba(47, 48, 58, 0.4),
+            rgba(47, 48, 58, 0.4));
     }
     @include mq (desktop) {
         max-width: 1600px;
@@ -40,11 +52,17 @@
         background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4),
                     rgba(47, 48, 58, 0.4)),
                 url(../images/hero/Header_lg.jpg);
+        background-image: -webkit-image-set(url(../images/hero/Header_lg.webp) 1x),
+                linear-gradient(to right, rgba(47, 48, 58, 0.4),
+                    rgba(47, 48, 58, 0.4));
     @include mq (retina) {
         background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4),
                     rgba(47, 48, 58, 0.4)),
                 url(../images/hero/Header_lg@2x.jpg);
             }
+        background-image: -webkit-image-set(url(../images/hero/Header_lg@2x.webp) 2x),
+                 linear-gradient(to right, rgba(47, 48, 58, 0.4),
+                     rgba(47, 48, 58, 0.4));
     }
     
 
